--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <artifactId>junit-jupiter</artifactId>
             <version>1.19.3</version> <scope>test</scope>
         </dependency>
+		<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.3.0</version>
+</dependency>
 	</dependencies>
 
 	<build>
