--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     <version>2.3.0</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
@@ -196,6 +200,10 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+    <groupId>io.github.git-commit-id</groupId>
+    <artifactId>git-commit-id-maven-plugin</artifactId>
+</plugin>
 		</plugins>
 	</build>
 
