--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,10 @@
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
 				<version>9.0.9</version>
+				<configuration>
+					<failOnError>false</failOnError>
+					<autoUpdate>false</autoUpdate>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
